Added spacing to skills headers in mobile layout.

--- a/index.css
+++ b/index.css
@@ -796,10 +796,17 @@ footer {
 
                 & .mobile-skills-div {
                     display: flex;
+
+                    & .mobile-skills {
+
+                        & h3 {
+                            margin-bottom: 20px;
+                            margin-top: 20px;
+                        }
+                    }
                 }
 
                 & .section-title {
-                    margin-bottom: 20px;
 
                     & .doodle-loops {
                         height: 10%;
