--- a/index.css
+++ b/index.css
@@ -772,7 +772,7 @@ footer {
                     width: 50%;
 
                     & img {
-                        width: 100%;
+                        width: 10%;
                     }
                 }
             }
@@ -893,6 +893,7 @@ footer {
     footer {
         .footer-content {
             flex-direction: column;
+            gap: 5%;
 
             & .footer-left {
                 width: 100%;
