--- a/index.css
+++ b/index.css
@@ -47,6 +47,20 @@ h2 {
     font-weight: normal;
 }
 
+.lang-link-a {
+    width: 30%;
+}
+
+.lang-link-p{
+    font-family: var(--quicksand), sans-serif;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.lang-link-p:hover{
+    color: red;
+}
+
 .white-rounded-background {
     background: #ffffff;
     padding: 20px;
@@ -102,7 +116,7 @@ header {
 
         & .nav-left {
             height: 100%;
-            width: 25%;
+            width: 20%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -116,12 +130,13 @@ header {
                 display: block;
                 position: relative;
                 padding: 4px 0;
+                width: 70%;
             }
         }
 
         & .nav-middle {
             height: 100%;
-            width: 50%;
+            width: 60%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -169,7 +184,7 @@ header {
 
         & .nav-right {
             height: 100%;
-            width: 25%;
+            width: 20%;
             display: flex;
             align-items: center;
             justify-content: center;
