--- a/index.css
+++ b/index.css
@@ -195,19 +195,33 @@ header {
             display: flex;
             align-items: center;
             justify-content: center;
-        }
+            gap: 5%;
 
-        & .contact-button {
-            text-decoration: none;
-            color: black;
-            padding: 10px;
-            border: 1px solid var(--carolinablue);
-            border-radius: 30px;
-        }
+            & .contact-button {
+                text-decoration: none;
+                color: black;
+                padding: 10px;
+                border: 1px solid var(--carolinablue);
+                border-radius: 30px;
+            }
 
-        & .contact-button:hover {
-            color: white;
-            background: var(--carolinablue);
+            & .contact-button:hover {
+                color: white;
+                background: var(--carolinablue);
+            }
+
+            & .switch-button {
+                text-decoration: none;
+                color: black;
+                padding: 10px;
+                border: 1px solid var(--atomictangerine);
+                border-radius: 30px;
+            }
+
+            & .switch-button:hover {
+                color: white;
+                background: var(--atomictangerine);
+            }
         }
     }
 }
