--- a/portfolio.css
+++ b/portfolio.css
@@ -367,6 +367,69 @@ main {
 
     }
 
+    .projects {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+
+        & h3 {
+            align-self: flex-start;
+        }
+
+        .project {
+            width: 100%;
+            margin-bottom: 2rem;
+
+            & .project-title {
+                text-align: center;
+                color: var(--lightcoral);
+                font-weight: bold;
+                margin-bottom: 1rem;
+            }
+
+
+            & .project-content {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+                align-items: flex-start;
+            }
+
+            & .project-image {
+                width: 40%;
+
+                & img {
+                    width: 100%;
+                }
+            }
+
+            & .project-description {
+                display: flex;
+                flex-direction: column;
+                width: 40%;
+                height: 100%;
+                justify-content: flex-start;
+
+                & p {
+                    margin-bottom: 1rem;
+                }
+
+                & .link-to-project {
+                    text-align: center;
+
+                    & a {
+                        text-decoration: none;
+                        color: var(--emerald);
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+
+    }
 
 }
 
