--- a/portfolio.css
+++ b/portfolio.css
@@ -51,6 +51,13 @@ h3 {
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+    background: var(--carolinablue);
+    color: white;
+    padding: 10px;
+    position: relative;
+    left: -10px;
+    border-radius: 25px;
+    width: 100%;
 }
 
 h4 {
@@ -90,6 +97,10 @@ h4 {
 
 .bold {
     font-weight: bold;
+}
+
+.center {
+    text-align: center;
 }
 
 header {
@@ -360,6 +371,10 @@ main {
 
                 & .role-title{
                     text-align: center;
+                    width: 100%;
+                    background: var(--emerald);
+                    color: white;
+                    border-radius: 25px;
                 }
             }
         }
@@ -431,6 +446,76 @@ main {
 
     }
 
+    .reflection {
+
+        & p {
+            margin-bottom: 1rem;
+        }
+    }
+}
+
+footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--carolinablue);
+    font-family: var(--quicksand), sans-serif;
+
+    .footer-content {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        color: white;
+
+        & .footer-left {
+            width: 25%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            & .calligraphy {
+                font-family: var(--amsterdam), sans-serif;
+                font-size: 1rem;
+                margin-right: 10px;
+            }
+        }
+
+        & .footer-middle {
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        & .footer-right {
+            width: 25%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+
+            & a {
+                height: 100%;
+                text-decoration: none;
+                color: white;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 2%;
+
+                & img {
+                    width: 10%;
+                    height: 10%;
+                }
+
+                & p {
+                    display: inline;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (width < 1280px) {
